Adjusted logged in options, fixed nav ul overflow

--- a/flask/2025_11_03_Rugby_Website/project/static/style.css
+++ b/flask/2025_11_03_Rugby_Website/project/static/style.css
@@ -113,12 +113,14 @@ header #header-profile #profile-dropdown {
     flex-direction: row;
     justify-content: space-evenly;
     clip-path: polygon(2.23rem 0, 100% 0, 100% 100%, 0% 100%);
-    padding-left: 2rem;
+    padding-left: 3rem;
+    padding-right: 1.5rem;
     align-items: center;
     bottom: -7rem;
     z-index: 2;
     background: #eeeeee;
-    width: 20rem;
+    width: auto;
+    gap: 2rem;
     height: 3rem;
 
     & a {
@@ -186,6 +188,7 @@ nav ul {
     justify-content: space-evenly;
     align-content: center;
     height: 100%;
+    overflow-x: hidden;
 }
 
 nav ul li {
